Added PIN to user profiles for tv clients to use
