# server/cmd/api/main.go
@@ -677,6 +677,9 @@ func (app *Application) registerUserRoutes(r chi.Router) {
 		r.Put("/name", app.UpdateUserName)
 		r.Put("/email", app.UpdateUserEmail)
 		r.Put("/password", app.UpdateUserPassword)
+		r.Get("/pin", app.GetUserPin)
+		r.Put("/pin", app.UpdateUserPin)
+		r.Post("/pin/verify", app.VerifyUserPin)
 		r.Put("/avatar", app.UpdateUserAvatar)
 		r.Post("/avatar/upload", app.UploadUserAvatar)
 		r.Delete("/", app.DeleteUserAccount)
